--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>Entregas em Aberto</title>
-    <style>
-        body { font-family: sans-serif; margin: 2em; }
-        h1 { color: #2c3e50; }
-        table { width: 100%; border-collapse: collapse; }
-        th, td { border: 1px solid #ccc; padding: 10px; text-align: left; }
-        th { background-color: #3498db; color: white; }
-        tr:nth-child(even) { background-color: #f2f2f2; }
-    </style>
+  <meta charset="UTF-8">
+  <title>Painel de Entregas</title>
+  <style>
+    body { font-family: sans-serif; margin: 2em; }
+    h1 { color: #2c3e50; }
+    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+    th, td { padding: 12px; border: 1px solid #ccc; text-align: left; }
+    th { background-color: #3498db; color: white; }
+    tr:nth-child(even) { background-color: #f2f2f2; }
+  </style>
 </head>
 <body>
-    <h1>Entregas em Aberto</h1>
-    <table>
-        <tr>
-            <th>Nome</th>
-            <th>Bairro de Coleta</th>
-            <th>Bairro de Entrega</th>
-        </tr>
-        <tr><td>João Silva</td><td>Lagoa Nova</td><td>Tirol</td></tr>
-        <tr><td>Maria Souza</td><td>Ponta Negra</td><td>Alecrim</td></tr>
-        <tr><td>Carlos Lima</td><td>Cidade Alta</td><td>Lagoa Azul</td></tr>
-    </table>
+  <h1>Entregas em Aberto</h1>
+  <table id="tabela"></table>
+
+  <script>
+    async function carregar() {
+      const resposta = await fetch("https://opensheet.elk.sh/1AMeYT39om3SSd9BAGYxozq4kouTTqdGhtZMKfuAolnY/Página1");
+      const dados = await resposta.json();
+
+      const tabela = document.getElementById("tabela");
+      tabela.innerHTML = "<tr><th>Nome</th><th>Bairro de Coleta</th><th>Bairro de Entrega</th></tr>";
+
+      dados.forEach(entrega => {
+        tabela.innerHTML += `<tr><td>${entrega.Nome}</td><td>${entrega.Coleta}</td><td>${entrega.Entrega}</td></tr>`;
+      });
+    }
+    carregar();
+  </script>
 </body>
 </html>
